hphp/test/slow/php7_backported/scalar-types/scalar_reserved6.php.expectf

Fatal error: Cannot use `bool` as class name as it is reserved in %s/scalar_reserved6.php on line 3
